--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
         <!-- Project 1 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project1.png" alt="Project 1" class="project-card-image">
+            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>🎮 Guess to Freedom Game</span>
@@ -517,7 +517,7 @@
         <!-- Project 2 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project2.png" alt="Project 2" class="project-card-image">
+            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>📖 Premium Dictionary App 🌍</span>
@@ -537,7 +537,7 @@
         <!-- Project 3 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project3.png" alt="Project 3" class="project-card-image">
+            <img src="assets/img/portfolio/projectC.webp" alt="Project 3" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span> 🤖Verinox GPT - Chatbot</span>
@@ -557,7 +557,7 @@
         <!-- Project 4 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project4.png" alt="Project 4" class="project-card-image">
+            <img src="assets/img/portfolio/projectD.webp" alt="Project 4" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>File Convertor Tool</span>
@@ -576,7 +576,7 @@
         <!-- Project 5 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project5.png" alt="Project 5" class="project-card-image">
+            <img src="assets/img/portfolio/projectE.webp" alt="Project 5" class="project-card-image">
           </div>
           <div class="project-card-title">
             <span>CGPA Calculator - SIMATS College </span>
