--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
         <img src="assets/img/dp.jpg" alt="" class="img-fluid box">
         <h1 class="text-light"><a href="index.html">Jayanth</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/jayanth0124?t=_89WgzqbBLLQTeqbkVQtwg&s=09" class="twitter"><i
+          <a href="https://twitter.com/jayanth0124" class="twitter" target="_blank" rel="noopener noreferrer"><i
               class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/jayanth0124?mibextid=ZbWKwL" class="facebook"><i
+          <a href="https://www.facebook.com/jayanth0124" class="facebook" target="_blank" rel="noopener noreferrer"><i
               class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/jayanth.chowdary__/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/jayanth-donavalli-b835491b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&original_referer="
-            class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/jayanth.chowdary__/" class="instagram" target="_blank"
+            rel="noopener noreferrer"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/jayanth-donavalli" class="linkedin" target="_blank"
+            rel="noopener noreferrer"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -677,7 +678,8 @@
         height: 100%;
         object-fit: cover;
         border-radius: 0.5rem;
-        border: 1px solid gold; /* Gold border */
+        border: 1px solid gold;
+        /* Gold border */
       }
 
       /* ✅ Project Title */
@@ -1019,6 +1021,28 @@
                 <a href="assets/img/portfolio/oracle.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Oracle University"><i class="bx bx-plus"></i></a>
                 <a href="awards/oracle.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/mindluster.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/mindluster.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Mind Luster"><i class="bx bx-plus"></i></a>
+                <a href="awards/mindluster.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/simplilearn.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/simplilearn.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="simpli learn"><i class="bx bx-plus"></i></a>
+                <a href="awards/simplilearn.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
               </div>
             </div>
           </div>
