--- a/inner-page.html
+++ b/inner-page.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -41,21 +43,26 @@
         <img src="assets/img/dp.jpg" alt="" class="img-fluid box">
         <h1 class="text-light"><a href="index.html">Jayanth</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/jayanth0124?t=_89WgzqbBLLQTeqbkVQtwg&s=09" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/jayanth0124?mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://twitter.com/jayanth0124?t=_89WgzqbBLLQTeqbkVQtwg&s=09" class="twitter"><i
+              class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/jayanth0124?mibextid=ZbWKwL" class="facebook"><i
+              class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/jayanth.chowdary__/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/jayanth-donavalli-b835491b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&original_referer=" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/jayanth-donavalli-b835491b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&original_referer="
+            class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About <Menu></Menu></span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About <Menu></Menu></span></a>
+          </li>
           <li><a href="#projects" class="nav-link scrollto"><i class="bx bx-task"></i> <span>Projects</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-book"></i> <span>Education</span></a></li>
           <li><a href="#awards" class="nav-link scrollto"><i class="bx bx-award"></i> <span>Awards</span></a></li>
-          <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo Gallery</span></a></li>
+          <li><a href="#photos" class="nav-link scrollto"><i class="bx bx-images"></i> <span>Photo Gallery</span></a>
+          </li>
           <li><a href="#interests" class="nav-link scrollto"><i class="bx bx-heart"></i> <span>Interests</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -83,7 +90,7 @@
     <section class="inner-page">
       <div class="container">
         <p>
-          Inner page 
+          Inner page
         </p>
       </div>
     </section>
@@ -99,7 +106,8 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
