--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="Jayanth Portfolio" name="keywords">
+  <meta content="Donavalli Jayanth" name="description">
 
 
 
@@ -52,13 +54,12 @@
         <h1 class="text-light"><a href="index.html">Jayanth</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/jayanth0124" class="twitter" target="_blank" rel="noopener noreferrer"><i
-              class="bx bxl-twitter"></i></a>
+              class="bx bxl-twitter" ></i></a>
           <a href="https://www.facebook.com/jayanth0124" class="facebook" target="_blank" rel="noopener noreferrer"><i
               class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/jayanth.chowdary__/" class="instagram" target="_blank"
-            rel="noopener noreferrer"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/jayanth-donavalli" class="linkedin" target="_blank"
-            rel="noopener noreferrer"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.instagram.com/jayanth.chowdary__/" class="instagram" target="_blank" rel="noopener noreferrer"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/jayanth-donavalli"
+            class="linkedin" target="_blank" rel="noopener noreferrer"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -678,8 +679,7 @@
         height: 100%;
         object-fit: cover;
         border-radius: 0.5rem;
-        border: 1px solid gold;
-        /* Gold border */
+        border: 1px solid gold; /* Gold border */
       }
 
       /* ✅ Project Title */
@@ -1040,8 +1040,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/simplilearn.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/simplilearn.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="simpli learn"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/simplilearn.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="simpli learn"><i class="bx bx-plus"></i></a>
                 <a href="awards/simplilearn.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
               </div>
             </div>
