--- a/awards/index.html
+++ b/awards/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta
+    content="Jayanth Portfolio, portfolio, web developer, software engineer, front-end developer, back-end developer, full-stack developer, UI/UX designer, JavaScript developer, Python developer, React developer, web designer, freelance developer, personal portfolio, coding projects, responsive web design, digital portfolio, programming, software development, tech portfolio, creative portfolio, professional portfolio, web design projects, developer showcase, online resume, portfolio website, Jayanth web portfolio"
+    name="keywords">
+  <meta content="Donavalli Jayanth" name="description">
 
 
 
@@ -596,18 +600,19 @@
         <!-- Project 6 -->
         <div class="project-card">
           <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project6.webp" alt="Project 6" class="project-card-image">
+            <img src="assets/img/portfolio/project6.png" alt="Project 6" class="project-card-image">
           </div>
           <div class="project-card-title">
-            <span>Smart Composting Bin with Automatic Odour Neutralizer - IoT</span>
+            <span>Gallery Nexus | Image Gallery</span>
           </div>
           <div class="project-card-description">
-            A fully automated composting bin that neutralizes odours and regulates temperature for efficient waste
-            breakdown.
+            A powerful image and video gallery using the Pexels API, allowing users to search, explore, and download HD-quality media freely With a seamless and user-friendly interface 🚀📸
           </div>
-          <a href="assets/Composting.pdf" class="project-card-button pdf-button" download>
-            <span>Get PDF</span>
+          <a href="https://gallery-nexus.netlify.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
           </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/image-gallery" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
       </div>
