--- a/awards/index.html
+++ b/awards/index.html
@@ -606,7 +606,8 @@
             <span>Gallery Nexus | Image Gallery</span>
           </div>
           <div class="project-card-description">
-            A powerful image and video gallery using the Pexels API, allowing users to search, explore, and download HD-quality media freely With a seamless and user-friendly interface 🚀📸
+            A powerful image and video gallery using the Pexels API, allowing users to search, explore, and download
+            HD-quality media freely With a seamless and user-friendly interface 🚀📸
           </div>
           <a href="https://gallery-nexus.netlify.app/" class="project-card-button" target="_blank">
             <span>Visit</span>
@@ -1440,7 +1441,7 @@
 
         <div class="row">
           <div class="col-lg-12 d-flex align-items-stretch">
-            <form id="contact-form" class="php-email-form" method="post" role="form" action="javascript:void(0);">
+            <form id="contact-form" class="php-email-form" method="POST" action="https://getform.io/f/amdkgogb">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -1460,10 +1461,29 @@
                 <textarea class="form-control" name="message" rows="10" id="message" required></textarea>
               </div>
               <div class="my-3">
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div id="error-message" class="error-message" 
+                    style="display: none; 
+                            color: red; 
+                            border: 2px solid crimson; 
+                            padding: 10px; 
+                            border-radius: 8px; 
+                            background-color: #ffe6e6; 
+                            font-weight: bold;
+                            box-shadow: 0 0 10px rgba(220, 20, 60, 0.5);">
+                  "Oops! Your message ghosted the internet. Try again before it moves on. 👻"
+                </div>
+
+                <div id="response-message" class="sent-message" style="display: none; color: green; 
+                         border: 2px solid gold; 
+                         padding: 10px; 
+                         border-radius: 8px; 
+                         background-color: #fff8dc;">
+                         
+                         "Congratulations! Your message is on its way! Let’s hope it doesn’t get lost like my motivation. 😅"
+                </div>
+
               </div>
-              <div class="text-center"><button type="submit">Submit</button></div>
+              <div class="text-center"><button type="submit">"Deliver This Like a Pizza" 🍕</button></div>
             </form>
           </div>
         </div>
@@ -1607,54 +1627,36 @@
 
 
 
-    <!-- Include EmailJS library -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', function () {
-        // Initialize EmailJS
-        emailjs.init('WrK1bJr8aSga8yCZg'); // Replace with your actual EmailJS user ID
+    <script>
+      document.getElementById("contact-form").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent default form submission
 
-        document.getElementById('contact-form').addEventListener('submit', function (event) {
-          event.preventDefault();
+        let formData = new FormData(this);
+        console.log("Submitting form...");
 
-          // These IDs from the previous steps
-          const serviceID = 'service_pnvzq9b'; // Replace with your actual EmailJS service ID
-          const templateID = 'template_jpfi5x4'; // Replace with your actual EmailJS template ID
+        fetch("https://getform.io/f/amdkgogb", { // ✅ Correct Getform URL
+          method: "POST",
+          body: formData
+        })
+          .then(response => {
+            console.log("Response received:", response);
+            if (!response.ok) throw new Error("Network response was not ok");
+            return response.text();
+          })
+          .then(data => {
+            console.log("Form submitted successfully!");
+            document.getElementById("response-message").style.display = "block";
+            document.getElementById("error-message").style.display = "none";
+            document.getElementById("contact-form").reset();
 
-          // Collect form data  
-          const nameElement = document.getElementById('name');
-          const emailElement = document.getElementById('email');
-          const subjectElement = document.getElementById('subject');
-          const messageElement = document.querySelector('textarea[name="message"]');
-
-          if (!nameElement || !emailElement || !subjectElement || !messageElement) {
-            console.error('One or more form elements not found.');
-            alert('Form submission failed. Please check the form and try again.');
-            return;
-          }
-
-          const formData = {
-            to_name: 'Recipient Name', // Ensure this matches the variable in your EmailJS template
-            from_name: nameElement.value,
-            from_email: emailElement.value, // This should match the variable in your EmailJS template
-            subject: subjectElement.value,
-            message: messageElement.value
-          };
-
-          // Log form data to the console for debugging
-          console.log('Form Data:', formData);
-
-          // Send the form data using EmailJS
-          emailjs.send(serviceID, templateID, formData)
-            .then(function (response) {
-              console.log('SUCCESS!', response.status, response.text);
-              alert('Your message has been sent successfully!');
-              document.getElementById('contact-form').reset(); // Reset form after successful submission
-            }, function (error) {
-              console.error('FAILED...', error);
-              alert('Failed to send your message. Please try again.');
-            });
-        });
+            setTimeout(() => {
+              document.getElementById("response-message").style.display = "none";
+            }, 5000);
+          })
+          .catch(error => {
+            console.error("Error submitting form:", error);
+            document.getElementById("error-message").style.display = "block";
+          });
       });
     </script>
 
