--- a/awards/index.html
+++ b/awards/index.html
@@ -9,11 +9,41 @@
     name="keywords">
   <meta content="Donavalli Jayanth" name="description">
 
-
-
+  <!-- Primary SEO Meta Tags -->
   <title>Jayanth Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
+  <meta name="description"
+    content="Discover the portfolio of Donavalli Jayanth, Web developer and Python Developer. Explore innovative web Projects, responsive designs, and Python Projects.">
+  <meta name="author" content="Donavalli Jayanth">
+  <meta name="keywords"
+    content="Jayanth Portfolio, web developer, software engineer, JavaScript developer, Python developer, digital portfolio, responsive web design, developer showcase, personal website">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#000000">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
+  <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
+  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://www.jayanth.xyz/">
+  <meta name="twitter:title" content="Jayanth Portfolio |  Web Developer, Photographer, Editor">
+  <meta name="twitter:description" content="Explore the cutting-edge projects and designs of Donavalli Jayanth.">
+  <meta name="twitter:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+
+  <!-- WhatsApp Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
+  <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
+  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Jayanth Portfolio Preview">
+
 
   <!-- Favicons -->
   <link href="assets/img/jayanth.png" rel="icon">
@@ -34,12 +64,28 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("WrK1bJr8aSga8yCZg");
-    })();
-  </script>
+
+  <!-- Schema Markup for Rich Results -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Donavalli Jayanth",
+      "url": "https://www.jayanth.xyz/",
+      "image": "https://www.jayanth.xyz/assets/img/bg1.jpg",
+      "jobTitle": "Web Developer, Photographer, Editor",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Freelance"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/in/jayanth-donavalli/",
+        "https://github.com/Jayanth0124",
+        "https://twitter.com/jayanth0124",
+        "https://www.instagram.com/jayanth.chowdary__/"
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -613,6 +659,65 @@
             <span>Visit</span>
           </a>
           <a class="github-button" href="https://github.com/Jayanth0124/image-gallery" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+
+        <!-- Project 7 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/p7.png" alt="Project 6" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>Advanced Object Analyzer</span>
+          </div>
+          <div class="project-card-description">
+            Built with Python and hosted on Streamlit, this system uses YOLOv8 for object detection, MediaPipe Pose
+            Estimation, and Wikipedia integration for real-time descriptions, featuring a Neumorphic dark mode UI.
+          </div>
+          <a href="https://object-analyzer.streamlit.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/object-detection" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+
+        <!-- Project 8 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/p8.png" alt="Project 6" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>ShadeShaper - Color Palette Generator 🎨</span>
+          </div>
+          <div class="project-card-description">
+            A versatile tool for crafting and exporting color palettes with ease. It features AI-based harmony,
+            mood-based schemes, image extraction, live previews, and multiple export formats for designers and
+            developers.
+          </div>
+          <a href="https://shadeshaper.netlify.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/colour-palette" data-icon="octicon-star"
+            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+        </div>
+
+        <!-- Project 9 -->
+        <div class="project-card">
+          <div class="project-card-image-container">
+            <img src="assets/img/portfolio/p9.png" alt="Project 6" class="project-card-image">
+          </div>
+          <div class="project-card-title">
+            <span>Personal Fitness Tracker 🏋️</span>
+          </div>
+          <div class="project-card-description">
+            A modern, premium-designed fitness tracker built with Python and Streamlit. It allows manual workout
+            tracking, interactive progress charts with Plotly, and user-controlled data saving—no auto-save! Free & Open
+            Source. 🚀
+          </div>
+          <a href="https://trackmygains.streamlit.app/" class="project-card-button" target="_blank">
+            <span>Visit</span>
+          </a>
+          <a class="github-button" href="https://github.com/Jayanth0124/fitness-tracker" data-icon="octicon-star"
             data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
 
@@ -1461,8 +1566,7 @@
                 <textarea class="form-control" name="message" rows="10" id="message" required></textarea>
               </div>
               <div class="my-3">
-                <div id="error-message" class="error-message" 
-                    style="display: none; 
+                <div id="error-message" class="error-message" style="display: none; 
                             color: red; 
                             border: 2px solid crimson; 
                             padding: 10px; 
@@ -1478,8 +1582,8 @@
                          padding: 10px; 
                          border-radius: 8px; 
                          background-color: #fff8dc;">
-                         
-                         "Congratulations! Your message is on its way! Let’s hope it doesn’t get lost like my motivation. 😅"
+
+                  "Congratulations! Your message is on its way! Let’s hope it doesn’t get lost like my motivation. 😅"
                 </div>
 
               </div>
