--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
   <!-- Primary SEO Meta Tags -->
   <title>Jayanth Portfolio</title>
   <meta name="title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
-  <meta name="description" content="Discover the portfolio of Donavalli Jayanth, Web developer and Python Developer. Explore innovative web Projects, responsive designs, and Python Projects.">
+  <meta name="description"
+    content="Discover the portfolio of Donavalli Jayanth, Web developer and Python Developer. Explore innovative web Projects, responsive designs, and Python Projects.">
   <meta name="author" content="Donavalli Jayanth">
-  <meta name="keywords" content="Jayanth Portfolio, web developer, software engineer, JavaScript developer, Python developer, digital portfolio, responsive web design, developer showcase, personal website">
+  <meta name="keywords"
+    content="Jayanth Portfolio, web developer, software engineer, JavaScript developer, Python developer, digital portfolio, responsive web design, developer showcase, personal website">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#000000">
 
-   <!-- Open Graph / Facebook -->
-   <meta property="og:type" content="website">
-   <meta property="og:url" content="https://www.jayanth.xyz/">
-   <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
-   <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
-   <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
+  <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
+  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
 
-   <!-- Twitter -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://www.jayanth.xyz/">
   <meta name="twitter:title" content="Jayanth Portfolio |  Web Developer, Photographer, Editor">
   <meta name="twitter:description" content="Explore the cutting-edge projects and designs of Donavalli Jayanth.">
   <meta name="twitter:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
-  
+
   <!-- WhatsApp Meta Tags -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.jayanth.xyz/">
-<meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
-<meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
-<meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="Jayanth Portfolio Preview">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.jayanth.xyz/">
+  <meta property="og:title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
+  <meta property="og:description" content="Explore the projects and designs of Donavalli Jayanth.">
+  <meta property="og:image" content="https://www.jayanth.xyz/assets/img/bg1.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Jayanth Portfolio Preview">
 
 
   <!-- Favicons -->
