--- a/awards/simplilearn.html
+++ b/awards/simplilearn.html
@@ -249,7 +249,7 @@
                         <div class="portfolio-description neumorphic">
                             <h2>Certificate with topics</h2>
                             <h5>1.Business Analytics with Excel <a href="https://simpli-web.app.link/e/E6DjIjR6KRb" target="_blank" rel="noopener noreferrer"> Click here </a></h5>
-                            <h5>2. ChatGPT for Cybersecurity</h5> <a href="https://www.mindluster.com/student/certificate/a11980f7" target="_blank" rel="noopener noreferrer"> Click here</a>
+                            <h5>2. ChatGPT for Cybersecurity</h5> <a href="https://simpli-web.app.link/e/zPfDovm42Rb" target="_blank" rel="noopener noreferrer"> Click here</a>
                         </div>
                     </div>
 
