--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     name="keywords">
   <meta content="Donavalli Jayanth" name="description">
 
+  <meta name="google-site-verification" content="nrkzWxIAIlIctKoiASAuZPYFg_fLKNBel1NzrotL9pI" />
+
   <!-- Primary SEO Meta Tags -->
   <title>Jayanth Portfolio</title>
   <meta name="title" content="Jayanth Portfolio | Web Developer, Photographer, Editor">
