--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Cyberpunk Error</title>
+    <title>Error 404 Not Found</title>
     <style>
         body { margin: 0; overflow: hidden; background: #0a0a0a; }
         canvas { display: block; width: 100vw; height: 100vh; }
